# sntutils-py

./: .gitignore  .pre-commit-config.yaml  README.md  coverage.json  pyproject.toml
.github/workflows/: python-package.yml
examples/: download_chirps_example.py  download_test.py  sntutils_config_example.yaml  test_import.py
src/sntutils/: __init__.py  config.py
src/sntutils/climate/: __init__.py  download_chirps.py
src/sntutils/utils/: __init__.py
tests/test_sntutils/: __init__.py  test_config.py  test_download_chirps.py
